--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
   Wire
   adafruit/Adafruit MPU6050 @ ^2.2.6
   adafruit/Adafruit Unified Sensor @ ^1.1.15
+  knolleary/PubSubClient @ ^2.8
 monitor_speed = 115200
