--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
   adafruit/Adafruit MPU6050 @ ^2.2.6
   adafruit/Adafruit Unified Sensor @ ^1.1.15
   knolleary/PubSubClient @ ^2.8
+  tanakamasayuki/TensorFlowLite_ESP32 @ ^1.0.0
 monitor_speed = 115200
